<resources>
    <string name="app_name">ImdMarket</string>
    <string name="header_title">IMDMARKET</string>
    <string name="login_string">Login:</string>
    <string name="login_hint">Login</string>
    <string name="senha_string">Senha:</string>
    <string name="senha_hint">Senha</string>
    <string name="entrar_btn">ENTRAR</string>
    <string name="esqueci_senha">Esqueci minha senha/login</string>
    <string name="menu_question">O que deseja fazer?</string>
    <string name="menu_cadastrar_produto">Cadastrar produto</string>
    <string name="menu_listar_produtos">Listar produtos</string>
    <string name="menu_alterar_produto">Alterar produto</string>
    <string name="menu_deletar_produto">Deletar produtos</string>
    <string name="create_title"> CADASTRAR PRODUTO</string>
    <string name="update_title"> ALTERAR PRODUTO</string>
    <string name="create_update_codigo_produto">Código do produto:</string>
    <string name="create_update_nome_produto">Nome produto:</string>
    <string name="create_update_descricao_produto">Descrição do produto:</string>
    <string name="create_update_estoque_produto">Estoque</string>
    <string name="create_update_clean">Limpar</string>
    <string name="create_save">Salvar</string>
    <string name="alterar_save">Alterar</string>
    <string name="deletar_title">DELETAR PRODUTO</string>
    <string name="deletar">Deletar</string>
    <string name="listar_title">LISTA DE PRODUTO</string>
    <string name="voltar_btn">Voltar</string>
</resources>