<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="428dp"
        android:layout_height="42dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/header_title"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/login_string"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/login_hint"
        android:textSize="15sp"
        android:textColorHint="@color/grey"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha_string"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/senha_hint"
        android:textSize="15sp"
        android:textColorHint="@color/grey"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/entrar_btn"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/purple_default"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_senha"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"/>

</LinearLayout>