<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/header_title"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="100dp"
        android:text="@string/menu_question"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_default"
        android:textColor="@color/white"
        android:text="@string/menu_cadastrar_produto"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_default"
        android:textColor="@color/white"
        android:text="@string/menu_listar_produtos"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple_default"
        android:textColor="@color/white"
        android:text="@string/menu_alterar_produto"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple_default"
        android:textColor="@color/white"
        android:text="@string/menu_deletar_produto"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="196dp"
        android:layout_height="131dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_storefront_24" />

</androidx.constraintlayout.widget.ConstraintLayout>